--- a/css/admin.css
+++ b/css/admin.css
@@ -11,26 +11,26 @@ body{
     background:#CCC7D1 ;
     position: relative;
 }
-.box{
-    padding: 30px 30px 0 30px;
-
-}
-.box.icon{
+.card-header{
     background: white;
-    width: 235px;
-    padding: 16px 20px;
-    border-radius: 5px;
-    display: flex;
-    justify-content: flex-start;
-    align-items: center;
+    color: black;
+    padding: 20px 20px 20px 20px;
+}
+.card-header .card-title{
+    text-align:center;
+    font-color:black;
+   
+}
+.card-header .card-text{
+    text-align:center; 
+    color:black;
+    text-align:center;
+}
+.card-body  {
+    height:80px;
+    text-align:center;
+    padding:20px; 
+    border-radius:10px 10px 10px 10px;
 }
 
-.box.icon i{
-font-size: 20px;
-width: 50px;
-height: 50px;
-line-height: 60px;
 
-text-align: center;
-background-color: blueviolet;
-}
